Correction z-index du menu

--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 800;
     color: #e1ffff;
     overflow-y: auto;
 }
